<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oppiamobile="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>
